src/snapshots/droid_tui__regression__visual_optimizer_menu_weight_snapshot@optimizer_menu_weight_mono.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                   DROID: optimizer_latency                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────┐┌ Optimizer ───────────────────────────────────────────────────┐
│┌───┐┌──┐┐                                                                                    ││ Optimizer (3) · w = 0.4                                      │
││ CV…  C…                                                                                     ││▶ banner (default) obj 1.00 · avg 4.00→1.00 · max 4.00→1.00 · │
││   ││  ││                                                                                    ││back-edges 4→0                                                │
││   ││  ││                                                                                    ││   global min-sum obj 1.00 · avg 4.00→1.00 · max 4.00→1.00 ·  │
││   ││  ││                                                                                    ││back-edges 4→0                                                │
││   ││  ││                                                                                    ││   annealing obj 1.00 · avg 4.00→1.00 · max 4.00→1.00 ·       │
││   ││  ││                                                                                    ││back-edges 4→0                                                │
││   ││  ││                                                                                    ││ j/k select · Enter preview · r restore · s export · Esc close│
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││ ▶ ││  ││                                                                                    ││                                                              │
││ … ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
│└───┘└──┘┘                                                                                    ││                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Optimizer w = 0.4: j/k select · Enter preview · r restore · s export · Esc close | Renders degraded at 160 cols — use ≥ 36 cols or reduce scale | Scale: 1.0 |│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
