src/snapshots/droid_tui__regression__visual_optimizer_preview_recolor_snapshot@optimizer_preview_classic.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                   DROID: optimizer_latency                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────┐┌ Optimizer ───────────────────────────────────────────────────┐
│┌───┐┌──┐┐                                                                                    ││ Optimizer (3) · w = 0.0 (min-sum)                            │
││ CV…  C…                                                                                     ││▶ banner (default) obj 1.00 · avg 4.00→1.00 · max 4.00→1.00 · │
││   ││  ││                                                                                    ││back-edges 4→0                                                │
││   ││  ││                                                                                    ││   global min-sum obj 1.00 · avg 4.00→1.00 · max 4.00→1.00 ·  │
││   ││  ││                                                                                    ││back-edges 4→0                                                │
││   ││  ││                                                                                    ││   annealing obj 1.00 · avg 4.00→1.00 · max 4.00→1.00 ·       │
││   ││  ││                                                                                    ││back-edges 4→0                                                │
││   ││  ││                                                                                    ││ j/k select · Enter preview · r restore · s export · Esc close│
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││ ▶ ││  ││                                                                                    ││                                                              │
││ … ││  ││                                                                                    │└──────────────────────────────────────────────────────────────┘
││   ││  ││                                                                                    │┌ Graph ───────────────────────────────────────────────────────┐
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ┌(unnamed)──────────────────────────────────────────────────────┐
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││╭B1.1────────────────╮ilte╭vca──╭out────╭O1──────────────────╮│
││   ││  ││                                                                                    │││     │      │      ││    ││    │ │     ││     │     │       ││
││   ││  ││                                                                                    │││     ◉──────◉──────◉●────◉●────◉─●─────◉●─────●─────●       ││
││   ││  ││                                                                                    │││     │      │      ││    ││    │ │     ││     │     │       ││
││   ││  ││                                                                                    ││╰────────────────────╯────╰─────╰───────╰────────────────────╯│
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    └───────────────────────────────────────────────────────────────┘
││   ││  ││                                                                                    ││                                                              │
││   ││  ││                                                                                    ││                                                              │
│└───┘└──┘┘                                                                                    ││                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Preview: banner (default) | latency avg 1.0 / max 1.0 (1 loop ≈ 190µs) | 0 back edge(s) | Scale: 1.0 | Orientation: Portrait                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
