src/snapshots/droid_tui__regression__visual_paused_dim_panels_snapshot@paused_classic_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                               DROID: arpeggio1                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 ────────────────────────────────────────────────────────────────────────┐
│┌ ○ B1.1 ──────┐┌ ○ B1.2 ──────┐┌ ○ B1.3 ──────┐┌ ○ B1.4 ──────┐              │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
│┌ ○ B1.5 ──────┐┌ ○ B1.6 ──────┐┌ ○ B1.7 ──────┐┌ ○ B1.8 ──────┐              │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
│     ◉ P1.1          ◉ P1.2                                                   │
│       0%              0%                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O ──────────────────────────────────────────────────────────────────────┐
│    ← Copy O3       → Copy I1       ← Copy O1     ← Arpeggio O4               │
│     CV OUT           CV IN          CV OUT          CV OUT                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘








┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | PROCESSING PAUSED | Scale: 1.0 | Orienta│
└──────────────────────────────────────────────────────────────────────────────┘
