src/snapshots/droid_tui__regression__visual_paused_dim_panels_snapshot@paused_mono_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                               DROID: arpeggio1                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌──┐┌────┐┐
◉ ◉…  CV …
0%0%│    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│○○││    ││
│……││    ││
│  ││    ││
│  ││    ││
│○○│◀  ▶ ││
│○○│…  … ││
│  ││    ││
│  ││    ││
│  ││    ││
│○○││    ││
│……││    ││
│  ││    ││
└──┘└──▶─┘┘
┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | PROCESSING PAUSED | Renders degraded at │
└──────────────────────────────────────────────────────────────────────────────┘
