src/snapshots/droid_tui__regression__visual_paused_dim_panels_snapshot@paused_terminal_120.snap
---
source: src/regression.rs
assertion_line: 2957
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                   DROID: arpeggio1                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│┌ ○ [DIR] Direc┐┌ ○ [PNG] Enabl┐┌ ○ [FLY] Switc┐┌ ○ [OCT] Set o┐┌ ○ [DRP] When ┐┌ ○ [STA] Enfor┐┌ ○ [TRI] Switc┐      │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │      │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘      │
│┌ ○ [MIN] Switc┐◉ [SPE] Speed of◉ [PAT] Arpeggio                                                                      │
││     OFF ○    │       0%              0%                                                                             │
│└──────────────┘                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│← [ENV] envelope→ [CLK] optional← [CLK] internal← [V/O] pitch (V                                                      │
│     CV OUT           CV IN          CV OUT          CV OUT                                                           │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘











┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | PROCESSING PAUSED | Scale: 1.0 | Orientation: Portrait                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
