src/snapshots/droid_tui__regression__visual_paused_dim_panels_snapshot@paused_terminal_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                               DROID: arpeggio1                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 ────────────────────────────────────────────────────────────────────────┐
│┌ ○ [DIR] Dire…┐┌ ○ [PNG] Enab…┐┌ ○ [FLY] Swit…┐┌ ○ [OCT] Set …┐              │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
│┌ ○ [DRP] When…┐┌ ○ [STA] Enfo…┐┌ ○ [TRI] Swit…┐┌ ○ [MIN] Swit…┐              │
││     OFF ○    ││     OFF ○    ││     OFF ○    ││     OFF ○    │              │
│└──────────────┘└──────────────┘└──────────────┘└──────────────┘              │
│◉ [SPE] Speed o…◉ [PAT] Arpeggi…                                              │
│       0%              0%                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O ──────────────────────────────────────────────────────────────────────┐
│← [ENV] envelope→ [CLK] optiona…← [CLK] interna…← [V/O] pitch (…              │
│     CV OUT           CV IN          CV OUT          CV OUT                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘








┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | PROCESSING PAUSED | Renders degraded at │
└──────────────────────────────────────────────────────────────────────────────┘
