src/snapshots/droid_tui__regression__visual_physical_full_arpeggio_snapshot@physical_full_arpeggio_classic_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                               DROID: arpeggio1                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌──┐┌────┐┐
◉ ◉…  CV …
0%0%│    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│○○││    ││
│……││    ││
│  ││    ││
│  ││    ││
│○○│◀  ▶ ││
│○○│…  … ││
│  ││    ││
│  ││    ││
│  ││    ││
│○○││    ││
│……││    ││
│  ││    ││
└──┘└──▶─┘┘
┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 228 │
└──────────────────────────────────────────────────────────────────────────────┘
